src/objects/ensxapp__SAP_Custom_Field_Definition__mdt.object
<CustomObject>
    <description>A custom field specific to a SAP component</description>
    <fields>
        <fullName>ensxapp__Column_Order__c</fullName>
        <description>This indicates the order in which columns will be displayed</description>
        <inlineHelpText>This indicates the order in which columns will be displayed</inlineHelpText>
        <label>Column Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ensxapp__Custom_Label__c</fullName>
        <description>If multilingual support is required, use this to insert the fullName value of the Custom Label to be used for the column value</description>
        <inlineHelpText>If multilingual support is required, use this to insert the fullName value of the Custom Label to be used for the column value</inlineHelpText>
        <label>Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__Label__c</fullName>
        <description>Field Name</description>
        <inlineHelpText>This is the default label value that will be used for Column or Label name</inlineHelpText>
        <label>Default Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Component_Custom_Field_Group__c</fullName>
        <description>This is the component this field definition will be linked to</description>
        <inlineHelpText>This is the component this field definition will be linked to</inlineHelpText>
        <label>SAP Custom Field Definition</label>
        <referenceTo>ensxapp__SAP_Component_Custom_Field_Group__mdt</referenceTo>
        <relationshipLabel>SAP Custom Field Definition Parameters</relationshipLabel>
        <relationshipName>SAP_Custom_Field_Definition_Parameters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Field__c</fullName>
        <description>The name of the custom field as listed in SAP</description>
        <inlineHelpText>The name of the custom field as listed in SAP</inlineHelpText>
        <label>SAP Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SAP Custom Field Definition</label>
    <pluralLabel>SAP Custom Field Definition</pluralLabel>
</CustomObject>